New version of the introdution

--- a/manuscript/_assets/references.bib
+++ b/manuscript/_assets/references.bib
@@ -8,6 +8,17 @@
   number = {8},
 }
 
+@article{dijkstra2010cross,
+  title={How cross-language similarity and task demands affect cognate recognition},
+  author={Dijkstra, Ton and Miwa, Koji and Brummelhuis, Bianca and Sappelli, Maya and Baayen, Harald},
+  journal={Journal of Memory and language},
+  volume={62},
+  number={3},
+  pages={284--301},
+  year={2010},
+  publisher={Elsevier}
+}
+
 @article{spivey1999cross,
   title={Cross talk between native and second languages: Partial activation of an irrelevant lexicon},
   author={Spivey, Michael J and Marian, Viorica},
