--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -1,5 +1,5 @@
 ---
-title: "The role of cognateness in non-native spoken word recognition"
+title: "The role of cognateness in native spoken word recognition"
 ---
 
 
@@ -44,39 +44,17 @@ theme_set(theme_ggdist() +
 
 # Introduction
 
-Listening to non-native speech is costlier than listening to native speech, even for highly proficient bilinguals, and especially in acoustically adverse situations [@lecumberri2010non; @takata1990english]. However, there are some sources of information which may make non-native speech comprehension easier. One of the sources of this increased difficulty stems from the possible mismatch between the phonology of the native and the non-native languages: some acoustic features embedded in the non-native speech signal do not overlap perfectly with any phonemic category in the listener's native language. For example, imagine a Spanish native, with no previous familiarity with any other language, who listens for the first time to French may encounter the word /pɔʁt/ (*porte*), translation of door in French. The voiced uvular fricative consonant /ʁ/ and the open-mid back rounded vowel /ɔ/ do not exist in Spanish as phonemic categories. These discrepancies can nonetheless be perceived as allophonic variations the native (Spanish) phonemes /ɾ/ and /o/ [@best2001discrimination], and the non-native speech signal may engage lexical processing mechanisms [@weber2004lexical], leading to the activation and selection, and therefore the recognition of its translation to Spanish /pweɾta/ (*puerta*). The recognition of this French, unfamiliar word relies almost entirely on its similarity with its Spanish translation. Conversely, imagine now that the same Spanish listener hears English for the first time and encounters the word /dɔː/ (*door*). This time, phonological similarity is of little help: /pweɾta/ and /dɔː/ share very few phonemes. It would come as a surprise if the listener was able to translate the English word successfully, if not by relying on previously learnt word-concept associations---which they lack, as they are unfamiliar to English.
+Listening to non-native speech is costlier than listening to native speech, even for highly proficient bilinguals, and especially in acoustically adverse situations [@lecumberri2010non; @takata1990english]. One of the sources of this increased difficulty is the partial mismatch between the phonology of the native and the non-native languages: some acoustic features embedded in the non-native speech signal do not overlap perfectly with any phonemic category in the listener's native language. For example, imagine a Spanish native with no previous familiarity with any other language listening to French for the first time. This listener may encounter the word /pɔʁt/ (*porte*), translation of door in French. The voiced uvular fricative consonant /ʁ/ and the open-mid back rounded vowel /ɔ/ do not exist in Spanish as phonemic categories. These discrepancies can nonetheless be perceived as allophonic variations the native (Spanish) phonemes /ɾ/ and /o/ [@best2001discrimination], leading to the non-native speech signal engaging lexical processing mechanisms [@weber2004lexical]. Even if unfamiliar with the word-form /pɔʁt/, the Spanish monolingual is likely to activate the phonological representation of its Spanish translation /pweɾta/ (*puerta*), ultimately accessing the right semantic representation. Although the phonetic mismatch between the non-native word and its translation can have a noticeable toll on comprehension [@cutler2004patterns], the fact that word recognition can take place at all in such circumstances illustrates that non-native listeners---even low-proficiency ones---are rarely completely naïve to the language they are listening to.
 
-Cross-language phonological similarity seems, at face value, an important source of information for unfamiliar listeners during auditory word recognition, even if translations are not phonologically identical. Although this mismatch has a noticeable toll on comprehension [@cutler2004patterns], the fact that word recognition can take place at all in such circumstances illustrates that non-native listeners–even low-proficiency ones–are rarely completely naïve to the language they are listening to. In the present study, we investigate the extent to which adult listeners rely on the phonological similarity between their native and non-native languages during word recognition, capitalising on the role of *cognates*.
+Imagine now that the same Spanish listener hears English for the first time and encounters the word /dɔː/ (*door*). This time, phonological similarity is of little help: /pweɾta/ and /dɔː/ do not share any phonemes. It would come as a surprise if the listener was able to translate the English word successfully. Non-native listeners rely on the phonological similarity between the word-forms presented in the input and their translations. Luckily for them, most languages share such kind of similarity. This is frequently due to their typological closeness and/or socio-historical events involving the speakers of these languages (e.g., migration, social contact). For example, Romance languages such as Spanish and Catalan share many form-similar translation equivalents (also known as *cognates*) [@schepens2012distributions], as in the case of *puerta* and *porta* (door in Spanish and Catalan, respectively). This type of cross-linguistic similarity has been extremely informative for the study of bilingual lexical processing: words that share high form-similarity with their translations are processed faster and more accurately than words sharing lower phonological similarity. This phenomenon has provided strong evidence in favour of the language-non selective hypothesis of bilingual lexical access, which states that bilinguals activate lexical representations in both languages, even during monolingual situations. This facilitation effect has been reported for comprehension [@thierry2007brain; @midgley2011effects; @dijkstra2010cross], production [@costa2000cognate], learning [@de2000hard; @lotto1998effects; @valente2018does; @elias2022cross], and translation [@christoffels2006memory]. The role that cross-linguistic phonological similarity might play in monolingual lexical access during non-native speech comprehension is unclear. How much phonological similarity is enough for a monolingual to understand a word from a non-native language? How does phonological similarity interact with other determinants of word recognition?
 
-Many languages share, to some extent, similarities at the lexical level. This is frequently due to their typological closeness and/or socio-historical events involving the speakers of these languages (e.g., migration, social contact). Cognates embody a particular case of such commonalities. Cognates are defined as cross-language synonyms which have similar forms whose form is similar (at the phonological level, orthographic level, signed level), commonly due to their shared etymological origin^[Some form-similar cross-language synonyms are technically not cognates. For example, *sun* and *sol* (in Spanish) share phonological onset but their etymology points to different origins. The complimentary case is equally problematic when defining cognateness: cross-language synonyms that share etymological origin may not be necessarily be recognised as cognates by the average listener. Such is the case of *cheese* and *queso* which share Latin root but are phonologically dissimilar. For simplicity, we will use the term *cognateness* in this paper to include all cross-language synonyms that fulfill a specified threshold of form similarity, regardless of etymology. We do not expect that etymology plays a direct role on language perception if it is not via form-similarity, since it is not necessary for participants in psycholinguistic experiments to be aware of the etymology of the words they encounter in the tasks to be subject to the effect of form-similarity.]. For example, Romance languages such as Spanish and Catalan share many cognates [@schepens2012distributions], as in the case of *puerta* and *porta* (door in Spanish and Catalan, respectively). Cognates play a pivotal role in many models of bilingual lexical processing because they provide evidence that bilinguals access the lexicon in a language non-selective way. For instance, pictures are named faster by Spanish-Catalan bilinguals when their associated labels in both languages are cognates (e.g., *puerta*-*porta*), compared to when their labels are non-cognates (*mesa*-*taula*, [table]), which suggests that word representations of both languages are activated during word retrieval [@costa2000cognate]. This cognate advantage is not restricted to production, but also extends to word recognition [@thierry2007brain; @midgley2011effects], word learning [@de2000hard; @lotto1998effects; @valente2018does; @elias2022cross], and word translation [@christoffels2006memory].
+In the present study, we investigate the extent to which monolinguals can exploit phonological similarity when listening to words in an unfamiliar languages, in order to achieve comprehension, while taking into account other lexically-relevant variables interact with the lexical processing mechanisms involved. We used a translation elicitation task in which participants listened to words from an unfamiliar language, and then tried to guess their translation in their native language. We will henceforth refer to the auditory-presented words heard by participants on each trial as *presented words*, and the correct translation for the presented words as *target translations*. We explored listeners' reliance on phonological similarity to succeed in the task by manipulating the amount of phonological similarity between the presented words and their target translations. Since participants were unfamiliar with the presented language, they could only be able to use word-to-word connections to succeed in the translation of words in an unfamiliar language. We therefore predicted that, if the information provided by the phonological form of the unfamiliar presented words is sufficient for translation, participants' performance should increase when the translation pairs are phonologically more similar.
 
-## Lexical and conceptual routes for translation
+The extent to which participants can rely on phonological similarity is limited by other factors. In particular, the presence of phonological neighbours (word-forms than differ in one phoneme) may interfere with the activation and selection of the appropriate lexical representation in the native language. Words with denser phonological neighbourhoods are recognised more slowly and less accurately than words with sparser phonological neighbourhoods [@luce1998recognizing; @goldinger1989priming; @luce1990similarity; @hamburger1996phonological; @dufour2003lexical]. This is specially true if such neighbours share higher phonological similarity with the presented word, or are lexically more frequent than the target translation [@luce1998recognizing]. The inhibitory effect of phonological neighbourhoods has also been reported across languages. For instance, @weber2004lexical observed that bilinguals displayed lexical competition effects from words in their native language when performing a word-referent matching task in their L2.
 
-Early theoretical accounts of this 'Cognate effect' proposed that the impact of cognateness on lexical processing depends on bilinguals' proficiency in their second language (L2) [@potter1984lexical; see @chen1989patterns for similar results]. The reasoning behind this claim was the assumption that second-language learners start acquiring words in their L2 by associating them to their translation in their L1 (lexical route), instead of directly to their shared concept (conceptual route). This word-to-word connectivity should be sensitive to form-similarity (i.e., cognateness): the more similar the two word- forms are, the stronger the connection. As learners become more proficient, the connection between L2 representations and their meaning grows stronger, and L2 word processing becomes less reliant on word-word connections between L1 and L2 representations. Cognates subsequently exert less impact on lexical processing in proficient speakers [see @andras2022cognate for recent experimental evidence for this claim]. The Revised Hierarchical Model [RHM, @kroll1994category] captured this hypothesis and predicted that translating words from L1 to L2 should take longer than translating from L2 to L1. The rationale behind this prediction was that L1-to-L2 translation relies more strongly on word-to-word links between L1 and L2 representations, where L2-to-L1 translation relies more strongly on the mediation between the concept and the two word- forms. L1-to-L2 translation should therefore be more sensitive to the form similarity between the L1 and the L2 representations: cognate words should be retrieved faster than non-cognate words during L1-to-L2 translation.
+In the case of the present task, the potential effect of cross-language phonological neighbourhood density is critical. The presence of phonologically similar non-translation equivalents (e.g., false friends) may act as distractor during lexical access, obstructing the selection of the appropriate target translation in the listener's lexicon. Even if the presented word and its target translation share high phonological similarity, participants may still provide incorrect translations if the presented word also shares high phonological similarity with words on the target language other than its translation, specially if any of them is more lexically frequent than the target translation. We hypothesised that the size of the facilitatory role of phonological similarity would be inversely proportional to the amount of higher-frequency phonological neighbours of the presented word in the target language. For instance, one could expect English participants to incorrectly translate the Spanish word *botón* as bottom instead of as its correct translation *button* (because the lexical frequency of *bottom* is higher than that of *button* and also phonological closer). To test this prediction, we developed a lexical frequency-dependent measure of cross-language phonological neighbourhood density, in which a neighbour is counted only if it is higher frequency and is one phoneme appart from the presented word. If the phonological neighbourhood density of the target translation affects participants' performance negatively, this would suggest that non-native words trigger competition between words in the native language during translation.
 
-To test these predictions, @degroot1994forward and @de1992determinants asked Dutch natives with high (but non-native) English proficiency to translate Dutch words to English (L1-to-L2) or English words to Dutch (L2-to-L1). Although participants' performance in both conditions was roughly equivalent for cognates, non-cognates were translated more slowly from Dutch to English than from English to Dutch, suggesting that L1-to-L2 translation is more sensitive to form-similarity than L2-to-L1 translation. Conversely, participants' performance was more sensitive to semantic variables (e.g., concreteness) when translating English words to Dutch, compared to when translating Dutch words to English, suggesting that L2-to-L1 translation was more sensitive to the shared conceptual properties of the translation pair.
-
-These findings support a soft version of the RHM model, in which both the conceptual and the lexical translation routes are active during translation, but where L1-to-L2 translation relies more strongly on word-to-word links between L1 and L2 representations than L2-to-L1 translation does, and therefore is more sensitive to cognateness. Further evidence for the presence of this difference between L1-to-L2 and L2-to-L1 translations on the degree of reliance on the lexical and or the conceptual routes between L1-to-L2 and L2-to-L1 translation was provided by @phillips2006erp, who used eletrophysiological recordings of bilinguals translating words from L1 to L2 or *vice versa* after semantic or phonological priming. The authors reported stronger N400 responses (associated with semantic priming) in L1-to-L2 translation than in L2-to-L12 translation, and stronger phonological mismatch negativity responses (associated with phonological priming) during L2-to-L1 translation, compared to L1-to-L2 translation.
-
-## Competition from lexical neighbours
-
-Since the RHM model was proposed, later studies on monolingual populations have focused how on the role of the network of connections that words establish networks of connections with each other at the form-level (phonological or orthographic) or at the conceptual level. For instance, the Neighbourhood Activation Model [NAM, @luce1998recognizing] highlighted how lexical selection is affected by the number of phonological neighbours that the selected word has. Words surrounded by a larger number of phonological neighbours (words that only differ in one phoneme from the target word) are responded to more slowly and less accurately than words from sparser phonological neighbourhoods [@goldinger1989priming; @luce1990similarity], especially when these neighbours' lexical frequency is higher [@luce1998recognizing]. 
-
-The existence of phonological links between words is supported with experimental evidence from the visual world paradigm and phonological priming. @meyer2007activation showed that target pictures were named faster when presented together with a phonologically-related distractor, suggesting that the activation of shared phonological information allowed the target to be activated and produced faster. there are also findings suggesting that facilitatory or inhibitory effects on target recognition depend on the degree of similarity the competitor shares with the target [@hamburger1996phonological; @dufour2003lexical]. When there is only mismatch of one phoneme between prime and target, inhibitory effects are exerted on target recognition [@dufour2003lexical]. This inhibition was proposed to be due to strong lexical activation of the prime which results in lexical interference, as opposed to simple phonological activation from less similar primes that triggers facilitation.
-
-These findings of phonological links between words in the monolingual lexicon pose an important question in the field of bilingualism research: do word representations in one language form part of the phonological or orthographic neighbours of the other language? @weber2004lexical observed that bilinguals displayed lexical competition effects from words in their native language when performing a word-referent matching task in their L2. This highlights that lexical competition for bilinguals during language comprehension may not only come from the tested language but also the native language, despite the native language not being actively required for the task. Other studies have similarly found interference when spoken target words in one language had phonological overlap with a word in the participant's other language, even when the other language was not required by the task [@spivey1999cross; @desroches2022dynamics]. Such patterns have even been found with young children less than 4 years old [@von2012language].
-
-The Bilingual Interactive Activation (BIA/BIA+) [@van1998orthographic; @dijkstra2002architecture] addressed this issue and suggested that lexical representations from both languages establish both excitatory and inhibitory connections with each other, resulting in an integrated lexicon for both languages. This is, in line with connectionist approaches to lexical processing [@mcclelland1981interactive]. Evidence supporting such an integrated lexicon is provided by the fact that bilinguals' performance in word recognition tasks is sensitive to the orthographic neighbourhood density of the presented word's translation. When bilingual participants are presented with words in one language in a lexical decision task, translating them to the other language took longer when they were part of large neighbourhoods [@van1998orthographic]. This suggests that presented words activated orthographic neighbourhoods in the other language, which competed for selection with the target word during recognition. 
-
-## The present study
-
-In the present study, we tested listeners' reliance on phonological similarity when translating words from an unfamiliar language to their native language, in order to investigate the plausibility of word-to-word connections during L1-to-L2 translation. We tested English native speakers and Spanish native speakers in a translation elicitation task. This paradigm has been used by bilingualism researchers to identify easily-recognisable cognates for experimental studies. Using this paradigm, we aim to delve deeper into the factors affecting foreign word recognition by monolingual participants with no prior exposure to the language.
-
-Participants were presented with spoken words in an unfamiliar (non-native language) and were asked to translate them to their native language. We will henceforth refer to the auditory-presented words heard by participants on each trial as presented words, and the correct translation for the presented words as target translations. The motivation behind testing participants in an unfamiliar language was that these participants can be considered a particular (extreme) case of unbalanced bilingualism, in which they do not know any words in L2, and therefore word-to-concept connections are, in principle, absent. As a consequence, these participants should only be able use word-to-word connections to succeed in the translation of words in an unfamiliar language. We predicted that, if the information provided by the phonological form of the unfamiliar presented words is sufficient for translation, participants' performance should increase when the translation pairs are phonologically more similar.
-
-Following @luce1998recognizing's NAM model, we further hypothesised that if participants are able to correctly translate words from an unfamiliar language based on their phonological similarity to the target word, similar sounding but incorrect translations (e.g., false friends) should be activated too. If this is the case, non-native words that have more phonological neighbours should be less likely to be correctly translated, especially if such neighbours have higher lexical frequency and are phonologically closer to the presented word than the target translation. For instance, one could expect English participants to incorrectly translate the Spanish word *botón* as bottom instead of as its correct translation *button* (because the lexical frequency of *bottom* is higher than that of *button* and also phonological closer). This combined constraint led us to calculate a specific form of phonological neighbours where a neighbour is counted only if it is higher frequency and has stronger phonological similarity than the target translation as judged by Levenshtein distance. If the phonological neighbourhood density of the target translation affects participants' performance negatively, this would suggest that non-native words trigger competition between words in the native language during translation.
-
-In Experiment 1, we collected data from two groups of British English natives. One group was presented with Catalan words, the other with Spanish words. We examined the extent to which participants were able to use the phonological similarity between the presented (Catalan or Spanish) word and its translation (i.e., cognateness) to provide accurate responses. In Experiment 2, we tested a group of (European) Spanish natives in the same task, who were presented with Catalan words. Catalan and Spanish are both Romance languages whose close typological distance is reflected in the fact that they share many cognates, where English is a Germanic language that shares considerably fewer cognates with Catalan and Spanish. By testing participants translating words from typologically close and distant languages, we expected to widen the range of the phonological similarity scores of the translation pairs involved in the experimental task, therefore allowing us to explore potential cross-language differences in participant's performance. Participants in Experiments 1 and 2 were surprisingly good at translation some words, which had low phonological similarity with their correct translation. In Experiment 3, we collected additional data from a new group of British English natives, who were presented with Catalan and Spanish words. In contrast with the procedure in Experiment 1, participants in Experiment 3 where asked, after providing a response in each trial, to report whether they had previous knowledge of the meaning of the presented word (e.g., some Spanish words are common knowledge, even for monolingual speakers of English). Finally, we present analyses on the joint data sets of Experiments 1 to 3.
+In Experiment 1, we collected data from two groups of British English natives living in the United Kingdom. One group was presented with Catalan words, the other with Spanish words. We examined the extent to which participants were able to use the phonological similarity between the presented word (in Catalan or Spanish) and its target translation to provide accurate responses. In Experiment 2, we tested a group of (European) Spanish natives in the same task, who were presented with Catalan words. Catalan and Spanish are both Romance languages whose close typological distance is reflected in the fact that they share many cognates, where English is a Germanic language that shares considerably fewer cognates with Catalan and Spanish. By testing participants translating words from typologically close and distant languages, we expected to widen the range of the phonological similarity scores of the translation pairs involved in the experimental task, therefore allowing us to explore potential cross-language differences in participant's performance. Participants in Experiments 1 and 2 were surprisingly good at translation some words, which had low phonological similarity with their correct translation. In Experiment 3, we collected additional data from a new group of British English natives, who were presented with Catalan and Spanish words. In contrast with the procedure in Experiment 1, participants in Experiment 3 where asked, after providing a response in each trial, to report whether they had previous knowledge of the meaning of the presented word (e.g., some Spanish words are common knowledge, even for monolingual speakers of English). Finally, we present analyses on the joint data sets of Experiments 1 to 3.
 
 # Experiment 1
 
@@ -196,7 +174,7 @@ For each translation pair, we defined three predictors of interest: the lexical 
 
 We included *Frequency* as a nuance predictor, under the hypothesis that---keeping other predictors constant---participants would translate higher-frequency words more accurately and faster than lower-frequency words. Lexical frequencies of correct translations were extracted from SUBTLEX-UK [@van2014subtlex], and transformed to Zipf scores. Words in the stimuli list without a lexical frequency value were excluded from data analysis (`r stim_exc_freq$cat_eng$n` in the Catalan list, `r stim_exc_freq$spa_eng$n` in the Spanish list).
 
-We calculated *Cognatenesss*, our main predictor of interest, by computing the Levenshtein similarity between the X-SAMPA transcriptions of each pair of translations using the `stringdist` R package [@van2014stringdist]. The Levenshtein distance computes the edit distance between two character strings---in this case, phoneme transcriptions---by counting the number of additions, deletions, and substitutions necessary to make both strings identical [@levenshtein1966binary]. We divided this edit distance by the number of characters included in the longest X-SAMPA transcription of the translation pair. This results in a proportion score, in which values closer to zero correspond to lower Levenshtein distances between phonological transcriptions (i.e., higher similarity), and values closer to 1 correspond to higher Levenshtein distances (i.e., lower similarity). This transformation also help account for the fact that the Levenshtein distance tends to increase with the length of the transcriptions. For interpretability, we subtracted this proportion from one, so that values closer to one correspond to higher similarity between phonological transcriptions, and values closer to zero correspond to lower similarity between phonological transcriptions. For example, the *table* (teɪbəl)-*mesa* (mesa) translation pair had a `r scales::percent(stringsim(enc2utf8("teɪbəl"), enc2utf8("mesa")))` similarity, while the *train* (`trEIn`)-*tren* (t`r knitr::asis_output("\U027E")`En) translation pair had a `r scales::percent(stringsim(enc2utf8("trEIn"), enc2utf8("tɾEn")))` similarity. Figure 1 summarises the lexical frequency, phonological neighbourhood density and phonological overlap of the words included in the Catalan and the Spanish lists.
+We calculated *Cognatenesss*, our main predictor of interest, by computing the Levenshtein similarity between the X-SAMPA transcriptions of each pair of translations using the `stringdist` R package [@van2014stringdist]. The Levenshtein distance computes the edit distance between two character strings---in this case, phoneme transcriptions---by counting the number of additions, deletions, and substitutions necessary to make both strings identical [@levenshtein1966binary]. We divided this edit distance by the number of characters included in the longest X-SAMPA transcription of the translation pair. This results in a proportion score, in which values closer to zero correspond to lower Levenshtein distances between phonological transcriptions (i.e., higher similarity), and values closer to 1 correspond to higher Levenshtein distances (i.e., lower similarity). This transformation also help account for the fact that the Levenshtein distance tends to increase with the length of the transcriptions. For interpretability, we subtracted this proportion from one, so that values closer to one correspond to higher similarity between phonological transcriptions, and values closer to zero correspond to lower similarity between phonological transcriptions. For example, the *table* (/teɪbəl/)-*mesa* (/mesa/) translation pair had a `r scales::percent(stringsim(enc2utf8("teɪbəl"), enc2utf8("mesa")))` similarity, while the *train* (`trEIn`)-*tren* (t`r knitr::asis_output("\U027E")`En) translation pair had a `r scales::percent(stringsim(enc2utf8("trEIn"), enc2utf8("tɾEn")))` similarity. Figure 1 summarises the lexical frequency, phonological neighbourhood density and phonological overlap of the words included in the Catalan and the Spanish lists.
 
 For each Catalan and Spanish word, we calculated the number of *CLPN* by counting the number of English words with same or higher lexical frequency, and whose phonological transcription (in X-SAMPA format) different in up to one phoneme from that of the presented Catalan or Spanish word. Lexical frequencies and phonological transcriptions were extracted from the multilingual database CLEARPOND [@marian2012clearpond]^[[Phonological transcriptions in CLEARPOND were generated from eSPEAK, [http://espeak.sourceforge.net/](http://espeak.sourceforge.net/)]].
 
